--- a/templates/index.html
+++ b/templates/index.html
@@ -76,13 +76,16 @@
       >Search Criminal</a
     >
 
-    <a
-    class="btn btn-primary btn-lg"
-    tabindex="-1"
-    role="button"
-    aria-disabled="true"
-    >Train</a
-  >
+    <form action="/train" method="get">
+      <input 
+      type="submit"
+      class="btn btn-primary btn-lg"
+      tabindex="-1"
+      aria-disabled="true"
+      value="Train"
+      >
+    </form>
+
 </div>
 
 
