--- a/templates/liveCam.html
+++ b/templates/liveCam.html
@@ -1,92 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
-    <title>SS-LiveCam</title>
-  </head>
-    <nav class="navbar navbar-expand-lg navbar-light bg-success">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="./index.html">Sentinel Scan</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+  <title>SS-LiveCam</title>
+</head>
+<nav class="navbar navbar-expand-lg navbar-light bg-success">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="./index.html">Sentinel Scan</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./uploadData.html">Upload Data</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Logout</a>
+        </li>
+      </ul>
+      <form class="d-flex">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+        <button class="btn btn-outline-success" type="submit">
+          Search
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./index.html"
-                >Home</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./uploadData.html">Upload Data</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Logout</a>
-            </li>
-          </ul>
-          <form class="d-flex">
-            <input
-              class="form-control me-2"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="btn btn-outline-success" type="submit">
-              Search
-            </button>
-          </form>
-        </div>
-      </div>
-    </nav>
-
-
-
-    <div class="container col-md-4 bg-success my-4 card-body">
-      <video id="videoElement" width="400" height="300" autoplay></video>
-
-    <script>
-        // Get user media
-        navigator.mediaDevices.getUserMedia({ video: true })
-            .then(function (stream) {
-                var videoElement = document.getElementById('videoElement');
-                videoElement.srcObject = stream;
-            })
-            .catch(function (error) {
-                console.error('Error accessing the camera:', error);
-            });
-    </script>
+      </form>
     </div>
-<div class="container col-md-4">
-    <a
-    href="#"
-    class="btn btn-primary btn-lg col-md-4"
-    tabindex="-1"
-    role="button"
-    aria-disabled="true"
-    >Detect Criminal Intent</a
-  >
+  </div>
+</nav>
+
+
+<div class="row">
+  <div class="col-md-5 mx-auto">
+
+    <div class="container bg-success my-4 card-body">
+      <h3 class="text-white">Live Camera</h3>
+      <video id="video1" width="400" height="300" autoplay></video>
+    </div>
+  </div>
+  <div class="col-md-5 mx-auto">  
+    <div class="container bg-success my-4 card-body">
+      <h3 class="text-white">Detection</h3>
+      <video id="video2" width="400" height="300" autoplay></video>
+    </div>
+  </div>
 </div>
 
-    
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+
+<div class="container col-md-4 my-4">
+  <div class="card mb-3" style="max-width: 540px; display: inline;">
+    <select id="selectCamera" class="col-md-7">
+      <option value="Select-Camera" disabled="true" selected="true">Select-Camera</option>
+    </select>
+    <button class="col-md-4">Detach</button>
+  </div>
+  <div class="card mb-3" style="max-width: 540px">
+    <div class="row g-0">
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title" id="predictRes"></h5>
+          <p class="card-text">Criminal Data</p>
+          <p class="card-text">
+            <small class="text-muted">Other data</small>
+          </p>
+        </div>
+      </div>
+    </div>
+    </div>
+  </div>
+  <script>
+    const video1 = document.getElementById('video1');
+    const video2 = document.getElementById('video2');
+    const canvas = document.createElement('canvas');
+    const camera = document.getElementById('selectCamera');
+    const context = canvas.getContext('2d');
+    const resEl = document.getElementById('predictRes');
+
+    navigator.mediaDevices.enumerateDevices().then(devices => {
+      devices.forEach(device => {
+        console.log("this is going")
+        if (device.kind === 'videoinput') {
+          console.log(device)
+          const option = document.createElement('option');
+          option.value = device.deviceId;
+          option.innerHTML = device.label || `Camera ${camera.length + 1}`;
+          camera.appendChild(option);
+        }
+      })
+    }).catch((error) => {
+      console.error("Error accessing media devices: ", error);
+    });
+
+    camera.addEventListener('change', () => {
+      const selectedCamera = event.target.value;
+      navigator.mediaDevices.getUserMedia({ video: { deviceId : { exact : selectedCamera }}}).then((stream) => {
+        video.srcObject = stream;
+      }).catch((error) => {
+        console.error("Error assesing webcam: ", error);
+      });
+    });
+
+    video.addEventListener('play', () => {
+      setInterval(() => {
+        context.drawImage(video, 0, 0, canvas.width, canvas.height);
+        const imageData = canvas.toDataURL('image/jpg');
+        sendDataToBackend(imageData);
+      }, 5000);
+    });
+
+    function sendDataToBackend(imageData) {
+      fetch('/liveInference', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify({ image: imageData })
+      }).then((response) => {
+        return response.json();
+      }).then((data) => {
+        resEl.innerHTML = data.prediction;
+        video2.srcObject = data.predictionTarget;
+      }).catch((error) => {
+        console.error("Error sending data to backend: ", error);
+      });
+    }
+  </script>
+</div>
+
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+</body>
+
 </html>
